Fix header alignment

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -47,6 +47,7 @@
   margin-top: 1rem;
   font-weight: 100;
   animation: header-appear 250ms;
+  text-align: center;
 }
 
 .hero h2 {
@@ -56,6 +57,7 @@
   animation: header-appear 250ms;
   animation-delay: 250ms;
   animation-fill-mode: both;
+  text-align: center;
 }
 
 @media (min-width: 500px) {
@@ -72,6 +74,7 @@
 
   .hero h1 {
     font-size: 3rem;
+    text-align: left;
   }
 }
 
